--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Home page</h1> 
+    <h1>Home page</h1>
+    <p th:text="'Hello, ' + ${name} + '!'" /p> 
 </body>
 </html>
