--- a/src/main/resources/templates/leaderboard.html
+++ b/src/main/resources/templates/leaderboard.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Leaderboard</title>
 </head>
 <body>
-    <h1>Home</h1>
-    <p th:text="'Hello, ' + ${name} + '!'" /p> 
+    
 </body>
 </html>
