--- a/src/main/resources/templates/leaderboard.html
+++ b/src/main/resources/templates/leaderboard.html
@@ -3,7 +3,7 @@
 <!-- <html> -->
     <link rel="stylesheet" th:href="@{/css/leaderboard.css}"/>
 <head>
-
+    <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
