started frontend of lesson page

--- a/src/main/resources/templates/lesson.html
+++ b/src/main/resources/templates/lesson.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" th:href="@{/css/lesson.css}"/>
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson</title>
 </head>
 <body>
+    <h1>Create Lesson</h1>
+    <h2>Lesson</h2>
+    <div class="title-part">
+        <p>Title</p>
+        <input type="text" class="search" placeholder="Title">
+    </div>
+    
     
 </body>
 </html>
